# securechat

./: .gitignore  .pylintrc  LICENSE  Readme.md  orchestrator.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: orchestrator.py
src/controller/: directmessages_controller.py  groupmembers_controller.py  groupmessages_controller.py  groups_controller.py  protocols.py  relations_controller.py  users_controller.py
src/db/: connection.py  database.db  directmessages_repo.py  groupmembers_repo.py  groupmessages_repo.py  groups_repo.py  relations_repo.py  repositories.py  users_repo.py
src/domain/: group.py  messages.py
src/screens/: chat_right_panel.py  chat_screen.py  direct_sidebar.py  group_sidebar.py  login_screen.py  signup_screen.py
src/utils/: config.py  dialogs_utils.py  validtions_utils.py
