# ---------------------------------------------------------------------
# Build system configuration
# ---------------------------------------------------------------------
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# ---------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------
[project]
name = "chatapp"
version = "0.1.0"
description = "A Streamlit-based chat application"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Muthukumar M D" }
]

dependencies = [
    "streamlit>=1.30"
]


# ---------------------------------------------------------------------
# Optional dependencies (development only)
# ---------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "mypy"
]


# ---------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false


# ---------------------------------------------------------------------
# Application configuration
# ---------------------------------------------------------------------
[tool.chatapp]
db_name = "db/database.db"

sender_email = "muthukumarmd@student.tce.edu"
sender_password = "vyeijjquvmookdmg"
