# ---------------------------------------------------------------------
# Build system configuration
# ---------------------------------------------------------------------
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# ---------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------
[project]
name = "chatapp"
version = "0.1.0"
description = "A Streamlit-based chat application"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Muthukumar M D" }
]

# Runtime dependencies (THIS is what Streamlit Cloud installs)
dependencies = [
    "streamlit>=1.30",
    "tomli>=2.0.1",   # <-- FIX: required by utils/config.py
    "bcrypt"
]


# ---------------------------------------------------------------------
# Optional dependencies (development only)
# ---------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "mypy",
    "pylint",
    "black"
]


# ---------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false


# ---------------------------------------------------------------------
# Application configuration
# ---------------------------------------------------------------------
[tool.chatapp]
db_name = "src/db/database.db"

sender_email = "muthukumarmd@student.tce.edu"
sender_password = "vyeijjquvmookdmg"


# ---------------------------------------------------------------------
# Poetry configuration (dependency management only)
# ---------------------------------------------------------------------
[tool.poetry]
name = "chatapp"
version = "0.1.0"
description = "Secure Streamlit chat application"
authors = ["Muthukumar"]

# IMPORTANT: Streamlit app, not a package
package-mode = false
